# RL_final_project

./: .gitignore  README.md  evaluation.py  pyproject.toml  requirements.txt
baseline/: random_baseline.py
configs/: ppo_default.yaml  toy_v0.yaml
degraded-data/landscape-50-4dim/: metadata.csv
degraded-data/landscape-50-test/: metadata.csv
degraded-data/new-4-dim/: metadata.csv
degraded-data/new-4-dim-bad/: metadata.csv
degraded-data/saturation/: evaluation.json  metadata.csv
org-data/landscape_dataset/forest_landscape/: evaluation.json
results/: ppo_eval.csv  ppo_resized.csv
results/20260507_010147/: ppo_eval.csv
results/tmp/: ppo_eval.csv
runs/ppo_fullres_20260507_010147/: evaluations.npz
runs/ppo_toy/: evaluations.npz
runs/ppo_toy/PPO_1/: events.out.tfevents.1777984650.gpu1.cplab.cs.nycu.edu.tw.1619001.0
runs/ppo_toy/PPO_10/: events.out.tfevents.1778036395.gpu8.cplab.cs.nycu.edu.tw.2660195.0
runs/ppo_toy/PPO_11/: events.out.tfevents.1778086940.gpu5.cplab.cs.nycu.edu.tw.1281517.0
runs/ppo_toy/PPO_2/: events.out.tfevents.1777985006.gpu1.cplab.cs.nycu.edu.tw.1622971.0
scripts/: eval.sh  run_ppo.sh  run_ppo_fullres.sh  smoke_test.sh
src/agents/: ppo_sb3.py
src/core/: reward.py  transforms.py
src/env/: image_dataset.py  photo_env.py
src/eval/: metrics.py  report_plots.py  run_eval.py  run_eval_resized.py
src/features/: histograms.py
src/train/: callbacks.py  train_ppo.py
tests/: test_features.py  test_transforms.py
tools/: adjust_brightness.py  degrade_images.py  make_comparison.py  webp2png.py
(+7 files in other folders)
